--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "22.4.3",
     "jest-serializer-vue": "0.3.0",
+    "less": "3.10.3",
+    "less-loader": "5.0.0",
     "nightwatch": "0.9.21",
     "node-notifier": "5.2.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
